<resources>
    <string name="app_name">CoffeeHouse</string>
    <string name="menu">Menu</string>
    <string name="coffee">Coffee</string>
    <string name="about">About us</string>
    <string name="abouyt">About</string>
    <string name="event">Event</string>
    <string name="contact">Contact</string>
    <string name="contact1">CONTACT</string>
    <string name="submit">Submit</string>
    <string name="adress">Adress</string>
    <string name="adres">Adress:</string>
    <string name="asde">Address:</string>
    <string name="adre">R.Garma Cerqueira 669</string>
    <string name="asd2">Navi Mumbai</string>
    <string name="asd3">44310-010 Mharashtra</string>
    <string name="phone">Phone No:</string>
    <string name="mb1">(+91)7417817718</string>
    <string name="mb2">(+91)8123459795</string>
    <string name="menu1">MENU</string>
    <string name="LATE">Late</string>
    <string name="late">LATE</string>
    <string name="blck">BLACK COFFEE</string>
    <string name="CApi">CAPPICHINO</string>
    <string name="Fevric">FEBRICE</string>
    <string name="hot">HOT COFFEE</string>
    <string name="clod">COLD COFFEE</string>
    <string name="snackes">SNACKES</string>
    <string name="ET">TEA</string>
    <string name="oRDer">ORDER</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_signup">Sign in</string>
    <string name="klfh">Follow us:</string>
    <string name="timing">Timimg:</string>
    <string name="rew">10:00AM-9:00PM</string>
    <string name="bfjckx">Timing:</string>
    <string name="login">Log in</string>
    <string name="sign">Sign up</string>
    <string name="title_activity_maps">Map</string>
    <string name="LATTE">Coffee and milk have been part of European cuisine since the 17th century. Caffè latte, Milchkaffee, café au lait and café con leche are domestic terms of traditional ways of drinking coffee, usually as part of breakfast in the home. Public cafés in Europe and the US it seems have no mention of the terms until the 20th century, although Kapuziner is mentioned in Austrian coffee houses in Vienna and Trieste in the 2nd half of 1700s as "coffee with cream, spices and sugar" (being the origin of the Italian cappuccino).\n The Austrian-Hungarian empire (Central Europe) had its own terminology for the coffees being served in coffee houses, while in German homes it was still called Milchkaffee. The Italians used the term caffè latte domestically, but it is not known from cafés like Florian in Venice or any other coffee houses or places where coffee was served publicly. Even when the Italian espresso bar culture bloomed in the years after WW2 both in Italy, and in cities like Vienna and London, espresso and cappuccino are the terms, latte is missing on coffee menus.

    In Italian latte (pronounced [latte]) means "milk"—so ordering a "latte" in Italy will get the customer a glass of milk.

   </string>
    <string name="BLACKCOFFEE">Black Coffee is also useful for health,person who want to reduce his/her wait,should try it.</string>
    <string name="FEBRICCE">It is a special type of coffee. Febricce is use in middle east part. </string>

    <string name="CAPPUCCINO">Cappuccino is a coffee drink that today is composed of double espresso and hot milk, with the surface topped with foamed milk.Cappuccinos are most often prepared with an espresso machine. The double espresso is poured into the bottom of the cup, followed by a similar amount of hot milk, which is prepared by heating and texturing the milk using the espresso machine steam wand. The top third of the drink consists of milk foam; this foam can be decorated with artistic drawings made with the same milk, called latte art.</string>
    <string name="COLDCOFFEE">Cold coffee is cold in taste.It is same as other coffee but it is cold from ice.</string>
    <string name="HOTCOFFEE">One of the best coffee use by the tired people. This coffee is best for refreshment.</string>
    <string name="SNACKS">A snack is a portion of food, smaller than a regular meal, generally eaten between meals.Snacks come in a variety of forms including packaged snack foods and other processed foods, as well as items made from fresh ingredients at home.</string>
    <string name="TEA">Tea is an aromatic beverage commonly prepared by pouring hot or boiling water over cured leaves of the Camellia sinensis, an evergreen shrub native to Asia.The term herbal tea usually refers to infusions of fruit or herbs made without the tea plant, such as steeps of rosehip, chamomile, or rooibos. These are sometimes called tisanes or herbal infusions to prevent confusion with tea made from the tea plant.</string>
    </resources>