<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/asdc">

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="150dp"
        android:textSize="20sp"
        android:textColor="#fff"
        android:background="@drawable/abc_btn_borderless_material" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/coffee"
        android:textColor="#fff"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginTop="24dp"
        android:textSize="16dp"

        android:background="@drawable/abc_btn_borderless_material" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/abouyt"
        android:id="@+id/button3"
        android:textColor="#fff"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_marginTop="24dp"
        android:textSize="17dp"
        android:background="@drawable/abc_btn_borderless_material" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/event"
        android:textColor="#fff"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:textSize="18dp"
        android:background="@drawable/abc_btn_borderless_material" />

    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textColor="#fff"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:textSize="16dp"
        android:background="@drawable/abc_btn_borderless_material" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60sp"
        android:textColor="#fff"
        android:layout_height="35sp"
        android:text="@string/login"
        android:id="@+id/button7"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/abc_action_bar_item_background_material" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60sp"
        android:textColor="#fff"
        android:layout_height="35sp"
        android:text="@string/sign"
        android:id="@+id/button8"
        android:layout_alignTop="@+id/button7"
        android:layout_toRightOf="@+id/button7"
        android:layout_toEndOf="@+id/button7"
        android:background="@drawable/abc_action_bar_item_background_material" />
</RelativeLayout>
